<resources>
    <string name="app_name">WhatsApp</string>
    <string name="tbSetting">Settings</string>
    <string name="name">SRINATH</string>
    <string name="user_description">Rest at the End not in the middl...</string>
    <string name="setting_account">Account</string>
    <string name="setting_account_description">Privacy, security, change number</string>
    <string name="setting_chat">Chats</string>
    <string name="setting_chat_description">Theme, wallpapers, chat history</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_notification_description"><![CDATA[Message, group & call tones]]></string>
    <string name="setting_data">Storage and data</string>
    <string name="setting_data_description">Network usage, auto-download</string>
    <string name="setting_help">Help</string>
    <string name="setting_help_description">Help centre, contact us, privacy policy</string>
    <string name="setting_invite">Invite a friend</string>
    <string name="acPrivacy">Privacy</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_security">Security</string>
    <string name="title_verification">Two-step verification</string>
    <string name="title_change_num">Change number</string>
    <string name="title_reqAccInfo">Request account info</string>
    <string name="title_delete">Delete my account</string>
    <string name="meta_title">from</string>
    <string name="meta_descrpiton">Meta</string>
    <string name="new_grp">New group</string>
    <string name="new_contact">New contact</string>
    <string name="action_contact">Select contact</string>
    <string name="acc_setting">Account</string>
    <string name="contact_title">Select contact</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="help">Help</string>
    <string name="last_seen">Last seen</string>
    <string name="my_contact">My contacts</string>
    <string name="profile_photo">Profile photo</string>
    <string name="about">About</string>
    <string name="status">Status</string>
    <string name="status_contacts">210 contact excluded</string>
    <string name="groups">Groups</string>
    <string name="grp_description">Everyone</string>
    <string name="live_location">Live location</string>
    <string name="location_description">None</string>
    <string name="blocked_contacts">Blocked contacts</string>
    <string name="block_description">0</string>
    <string name="finger_print">Fingerprint lock</string>
    <string name="finger_description">Disabled</string>
    <string name="personal_info">Who can see my personal info</string>
    <string name="personal_info_descrp">If you don\'t share your Last Seen,you won\'t be able to see other people\'s Last Seen</string>
    <string name="read_receipts">Read receipts</string>
    <string name="read_receipts_description">If turned off,you won\'t send or receive Read receipts.Read receipts are always sent for group chats</string>
    <string name="tv_disappearing">Disappearing messages</string>
    <string name="tv_Title">Default message timer</string>
    <string name="tv_Event">Off</string>
    <string name="tv_Description">Start new chats with disappearing messages set to your timer</string>
    <string name="tvTitle">Who can see my Last Seen</string>
    <string name="tvDescription">If you don\'t share your Last Seen, you won\'t be able to see other people\'s Last Seen.</string>
    <string name="rbEveryone">Everyone</string>
    <string name="rbMyContacts">My contacts</string>
    <string name="rbContactsExcepts">My contacts excepts</string>
    <string name="rbNobody">Nobody</string>
    <string name="done">Everyone</string>
    <string name="title_last_seen">Last seen</string>
    <string name="profilephoto">Profile Photo</string>
    <string name="profiletitle">Who can see my Profile Photo</string>
    <string name="aboutTitle">About</string>
    <string name="titleAbout">Who can see my About</string>
    <string name="rbOnlyShare">Only share with</string>
    <string name="statusPrivacyTitle">Who can see my status updates</string>
    <string name="statusPrivacyDescription">Changes to your privacy settings won\'t affect status updates that you\'ve sent already </string>
    <string name="statusPrivacy">Status privacy</string>
    <string name="groupTitle">Who can add me to groups</string>
    <string name="groupDescription">Admins who can\'t add ypu to a group chat will have the option of inviting you privately instead</string>
    <string name="titleGroup">Group</string>
    <string name="tvDefaultTitle">Start new chats with disappearing messages</string>
    <string name="just">hai</string>
    <string name="rbhours24">24 hours</string>
    <string name="rb7days">7 days</string>
    <string name="rbdays90">90 days</string>
    <string name="rboff">Off</string>
    <string name="titleMessageDefault">Default message timer</string>
    <string name="privacyLive">Live location</string>
    <string name="tvTitleLive">You aren\'t sharing live location in any chats</string>
    <string name="tvDescriptionLive">Live location requires background location. You can manage this in your device settings.</string>
    <string name="fingerprintTitle">Unlock with fingerprint</string>
    <string name="fingerprintDescription">When enabled you\'ll need to use fingerprint to open WhatsApp. You can Still answer calls if WhatsApp is locked</string>
    <string name="fingerprintTitlebar">Fingerprint lock</string>
    <string name="securityTitle">Show security notification on this phone</string>
    <string name="titleSecurity">Security</string>
    <string name="twoStepDescription">Two-step verification is enabled. You\'ll need to enter your PIN when registering yor phone number with WhatsApp again</string>
    <string name="titleDisable">Disable</string>
    <string name="titleChangePin">Change PIN</string>
    <string name="titleChangeEmail">Change email address</string>
    <string name="twoStepTitle">Two-step-verification</string>
    <string name="changeNumTitle"><![CDATA[Change your phone number will migrate your account info, group & settings.]]></string>
    <string name="changeNumDescription">Before proceeding, please confirm that you are able to receive SMS or calls at your new number</string>
    <string name="changeNumSettingDescription"><![CDATA[If you have both a new phone & a new number, first change your number on your old phone.]]></string>
    <string name="titleChangeNumber">Change number</string>
    <string name="btnChangeNum">Next</string>
    <string name="etHint">phone number</string>
    <string name="etCode">+ 91</string>
    <string name="oldTitle">Enter your old phone number with country code:</string>
    <string name="newPhoneTitle">Enter your new phone number with country code:</string>
    <string name="titleChangeNum">Change number</string>
    <string name="titleRequestAcc">Request account info</string>
    <string name="reqAccItemTitle">Request Sent</string>
    <string name="reqAccItemDescription">Ready by 17 September 2022</string>
    <string name="cardTitle">Please enter your phone number</string>
    <string name="cardBtn">OK</string>
    <string name="settingTitle">Settings</string>
    <string name="cancelTwoStepCard">CANCEL</string>
    <string name="disableTwoStepCard">DISABLE</string>
    <string name="twoStepCardTitle">Disable two-step verification?</string>
    <string name="reqAccItem">Request report</string>
    <string name="warningTitle">Deleting your acccount will:</string>
    <string name="btDeleteAcc">CHANGE NUMBER</string>
    <string name="deleteAccChangeNum">Change number instead?</string>
    <string name="etCountry">Country</string>
    <string name="phone">Phone</string>
    <string name="etCountryCode">+91</string>
    <string name="etPhoneNum">phone number</string>
    <string name="btText">DELETE MY ACCOUNT</string>
    <string name="etTextCountry">India</string>
    <string name="tvDltTitle">To delete your account, confirm your country code and enter your phone number.</string>
    <string name="titleDeleteMyAcc">Delete my account</string>
    <string name="chatTitle">Chats</string>
    <string name="chatBtCancel">CANCEL</string>
    <string name="chatOkBt">ok</string>
    <string name="chat_wallpaper"><![CDATA[To change your wallpaper foe dark theme,turn on dark theme form Setting > chat > Theme.]]></string>
    <string name="titleTheme">Light Theme Wallpaper</string>
    <string name="chatSystemTheme">System default</string>
    <string name="chatLightTheme">Light</string>
    <string name="chatDarkTheme">Dark</string>
    <string name="fontSmall">Small</string>
    <string name="fontMedium">Medium</string>
    <string name="fontLarge">Large</string>
    <string name="fontSizeTtile">Font size</string>
    <string name="fontSize">Font Size</string>
    <string name="fontDescription">Medium</string>
    <string name="langPhone">Phone,s language (English)</string>
    <string name="langOne">हिन्दी</string>
    <string name="langTwo">मराठी</string>
    <string name="langThree">ગુજરાતી</string>
    <string name="langFour">தமிழ்</string>
    <string name="langFive">বাংলা</string>
    <string name="langSix">తెలుగు</string>
    <string name="langSeven">ಕನ್ನಡ</string>
    <string name="langEight">മലയാളം</string>
    <string name="langNine">ਪੰਜਾਬੀ</string>
    <string name="langTen">اردو</string>
    <string name="chatBackupTitle">Last Backup</string>
    <string name="chatBackupDecription">Back up your messages and media to Google Drive. You can restore them when you reinstall WhatsApp. You message will also back up to your phone\'s internal storage</string>
    <string name="chatEndToEndTitle">End-to-end encrypted backup</string>
    <string name="chatEndToEndDescription">Off</string>
    <string name="chatGoogleDriveTitle">Google Drive setting</string>
    <string name="chatGoogleDriveDescription">Back up your chat history and media to Google Drive so if you change phones, your chat history is safe. For added security, you can protect your backup with end-to-end encryption.</string>
    <string name="chatBackupData">Back up to using cellular</string>
    <string name="chatBackupDescription">Never</string>
    <string name="chatGoogleTitle">Google Account</string>
    <string name="chatGoogleDescription">None selected</string>
    <string name="chatBackupDataCell">Back up using cellular</string>
    <string name="chatBackupVideos">Include videos</string>
    <string name="btnBackup">BACK UP</string>
    <string name="chatBackupTime">Local: 8:09 am</string>
    <string name="chatBackupTiming">Google Drive: Never</string>
    <string name="menuTitleNotification">Rest notification setting</string>
    <string name="btClearChat">CLEAR CHATS</string>
    <string name="btDeleteChats">DELETE CHATS</string>
    <string name="chatDeteleAllTitle">Also delete media received in chats form the phone </string>
    <string name="chatClearAllFirst">Also delete media received in chats form the phone gallery</string>
    <string name="chatClearSecond">Delete starred message</string>
    <string name="storagePhoto">Photos</string>
    <string name="storageAudio">Audio</string>
    <string name="storageVideo">Videos</string>
    <string name="storageDocument">Document</string>
    <string name="photoUploadPopup">Best quality photos are lager and can take longer to send</string>
    <string name="helpCentre">www.google.com </string>
    <string name="helpEtHint">Tell us how can help</string>
    <string name="menuContact">Send via email</string>
    <string name="contact_us">Contact us</string>


</resources>