<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/invite_a_friend"
        android:id="@+id/contact_invite"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:title="@string/contacts"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:id="@+id/contact_contact"/>
    <item
         android:title="@string/refresh"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:id="@+id/contact_refresh"/>
    <item
        android:title="@string/help"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:id="@+id/contact_help"/>

</menu>