<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="@dimen/dp110"
        android:background="@color/white"
        android:id="@+id/cvTwoStepCard">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twoStepCardTitle"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp30"
            android:textSize="@dimen/sp16"
            android:id="@+id/tvTwoStepCardTitle"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="@dimen/dp60">

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btCancelCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancelTwoStepCard"
            android:textColor="@color/green"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btDisableCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/disableTwoStepCard"
            android:textColor="@color/green"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>